--- a/serverless.yml
+++ b/serverless.yml
@@ -40,7 +40,13 @@ functions:
     handler: handler.emailSub
     events:
       - http: 
-        method: post
+          path: emailSub
+          method: post
+          cors: true
+      - http:
+          path: emailSub
+          method: options
+          cors: true
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
